# aniso

./: Aniso.cpp  Aniso.h  AnisoWrapper.cpp  AnisoWrapper.h  CMakeLists.txt  Geometry.cpp  Geometry.h  KernelFactory.cpp  KernelFactory.h  Quadrature.cpp  Quadrature.h  aniso.m  data.cfg  demo.m  gmres.cpp  gmres.h  main.cpp  matlab_io.h  startup.m
bbfmm/: bbfmm.h  blas_wrapper.cpp  blas_wrapper.h  linalg.h
class/@Aniso/: Aniso.m
cmake/: FindMATLAB.cmake
contrib/: cprintf.m  logging.m
utility/: Profiler.h  config.h
